--- a/app/src/main/res/layout/fragmet_my_page_introduce.xml
+++ b/app/src/main/res/layout/fragmet_my_page_introduce.xml
@@ -34,6 +34,7 @@
                     android:layout_weight="1"
                     >
                     <ImageView
+                        android:layout_marginTop="2dp"
                         android:layout_centerHorizontal="true"
                         android:layout_width="23dp"
                         android:layout_height="23dp"
@@ -42,16 +43,17 @@
                         />
 
                     <TextView
-                        android:textStyle="bold"
-                        android:lineHeight="15sp"
-                        android:layout_centerInParent="true"
-                        android:layout_centerHorizontal="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_above="@+id/mypage_intro_collab_layout"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="-3dp"
+                        android:fontFamily="@font/noto_bold"
+                        android:lineHeight="15sp"
                         android:text="협업여부"
                         android:textSize="10sp"
-                        android:layout_gravity="center"
-                        />
+                         />
 
                     <RelativeLayout
                         android:id="@+id/mypage_intro_collab_layout"
@@ -64,6 +66,7 @@
                         android:background="@drawable/mypage_intro_box_selector"
                         >
                         <TextView
+                            android:fontFamily="@font/noto_regular"
                             android:lineHeight="16sp"
                             android:id="@+id/mypage_intro_collab_tv"
                             android:layout_width="wrap_content"
@@ -93,6 +96,7 @@
                     >
 
                     <ImageView
+                        android:layout_marginTop="5dp"
                         android:layout_width="18dp"
                         android:layout_height="14.1dp"
                         android:layout_alignParentTop="true"
@@ -101,16 +105,16 @@
                         android:background="@drawable/ic_category" />
 
                     <TextView
+                        android:fontFamily="@font/noto_bold"
                         android:lineHeight="15sp"
                         android:id="@+id/mypage_intro_field_tv"
                         android:layout_centerInParent="true"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="3dp"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="활동분야"
                         android:textSize="10sp"
-                        android:textStyle="bold"
                         android:layout_gravity="center"
                         />
 
@@ -124,6 +128,7 @@
                         android:background="@drawable/box_on"
                         >
                         <TextView
+                            android:fontFamily="@font/noto_regular"
                             android:lineHeight="16sp"
                             android:id="@+id/mypage_intro_activity_part"
                             android:layout_centerHorizontal="true"
@@ -153,6 +158,7 @@
                     android:layout_weight="1"
                     >
                     <ImageView
+                        android:layout_marginTop="5dp"
                         android:layout_centerHorizontal="true"
                         android:layout_width="15.5dp"
                         android:layout_height="15.5dp"
@@ -161,6 +167,7 @@
                         />
 
                     <TextView
+                        android:fontFamily="@font/noto_bold"
                         android:lineHeight="15sp"
                         android:id="@+id/mypage_intro_status_tv"
                         android:layout_centerInParent="true"
@@ -170,7 +177,6 @@
                         android:layout_height="wrap_content"
                         android:text="업무상태"
                         android:textSize="10sp"
-                        android:textStyle="bold"
                         android:layout_gravity="center"
                         />
 
@@ -185,6 +191,7 @@
                         android:background="@drawable/box_on"
                         >
                         <TextView
+                            android:fontFamily="@font/noto_regular"
                             android:lineHeight="16sp"
                             android:id="@+id/mypage_intro_status"
                             android:layout_width="wrap_content"
@@ -238,13 +245,15 @@
 
                     >
                     <TextView
+                        android:layout_marginTop="-8dp"
+                        android:fontFamily="@font/noto_bold"
                         android:lineHeight="16sp"
                         android:letterSpacing="-0.12"
                         android:id="@+id/mypage_board_name_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="이충엽"
-                        android:textSize="12sp"
+                        android:textSize="13sp"
                         android:textStyle="bold"
                         android:layout_marginLeft="8.5dp"
                         android:textColor="#222222"
@@ -261,26 +270,30 @@
                         />
 
                     <TextView
+                        android:layout_marginTop="-5dp"
+                        android:fontFamily="@font/noto_regular"
                         android:lineHeight="16sp"
                         android:letterSpacing="-0.1"
                         android:id="@+id/mypage_board_company"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="SWU"
-                        android:textSize="10sp"
+                        android:textSize="12sp"
                         android:layout_toRightOf="@+id/mypage_board_view"
                         android:layout_marginLeft="9.2dp"
                         android:layout_gravity="center"
                         android:textColor="#525252"
                         />
                     <TextView
+                        android:layout_marginTop="-5dp"
+                        android:fontFamily="@font/noto_regular"
                         android:lineHeight="16sp"
                         android:letterSpacing="-0.1"
                         android:id="@+id/mypage_board_job"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="/DESIGNER"
-                        android:textSize="10sp"
+                        android:textSize="12sp"
                         android:layout_toRightOf="@+id/mypage_board_company"
                         android:layout_gravity="center"
                         android:textColor="#525252"
@@ -288,14 +301,15 @@
 
                 </LinearLayout>
                 <TextView
+                    android:fontFamily="@font/noto_regular"
                     android:lineHeight="16sp"
                     android:letterSpacing="-0.09"
                     android:id="@+id/mypage_board_datetime_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2018/12/30    01:16"
-                    android:textSize="9sp"
-                    android:layout_marginTop="4.8dp"
+                    android:textSize="10sp"
+                    android:layout_marginTop="-3dp"
                     android:textColor="#999999"
                     android:layout_marginLeft="8.5dp"
                     android:layout_below="@+id/mypage_board_name_tv"
@@ -312,6 +326,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
             <TextView
+                android:fontFamily="@font/noto_regular"
                 android:lineHeight="22sp"
                 android:letterSpacing="-0.13"
                 android:id="@+id/mypage_board_content_tv"
@@ -347,6 +362,7 @@
             android:background="#ffffff"
             >
             <TextView
+                android:fontFamily="@font/noto_bold"
                 android:lineHeight="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
