--- a/app/src/main/res/layout/rv_item_lounge_event.xml
+++ b/app/src/main/res/layout/rv_item_lounge_event.xml
@@ -7,14 +7,14 @@
         android:layout_height="188dp"
         android:background="#f9f9f9"
         >
-    <ImageView
-        android:id="@+id/rl_iv_lounge_event_eventImg"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:background="@drawable/lounge_event"
-        />
+        <ImageView
+            android:id="@+id/rl_iv_lounge_event_eventImg"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:background="@drawable/lounge_event"
+            />
         <TextView
-            android:textStyle="bold"
+            android:fontFamily="@font/noto_bold"
             android:id="@+id/tv_rv_item_lounge_event_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
 
             />
         <TextView
-            android:textStyle="bold"
+            android:fontFamily="@font/noto_bold"
             android:id="@+id/tv_rv_item_lounge_event_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
             android:layout_marginTop="82.7dp"
             />
         <TextView
-            android:textStyle="bold"
+            android:fontFamily="@font/noto_bold"
             android:id="@+id/tv_rv_item_lounge_event_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
             android:layout_marginTop="102.7dp"
             />
         <TextView
-            android:textStyle="bold"
+            android:fontFamily="@font/noto_bold"
             android:id="@+id/tv_rv_item_lounge_event_place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
