--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,39 +26,40 @@
         android:layout_marginTop="52dp"
         android:layout_width="324dp"
         android:layout_height="50dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:background="@drawable/signup2_round_background"
         >
         <TextView
-            android:layout_marginTop="15dp"
+            android:fontFamily="@font/noto_regular"
             android:layout_marginLeft="21dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="#333333"
             android:lineSpacingExtra="5sp"
-            android:gravity="center_horizontal"
             android:text="이메일"/>
-    <EditText
-        android:layout_marginTop="16dp"
-        android:background="@null"
-        android:id="@+id/et_login_id"
-        android:layout_marginLeft="32dp"
-        android:textSize="14dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="dlfb77@gmail.com"/>
+        <EditText
+            android:fontFamily="@font/noto_regular"
+            android:background="@null"
+            android:id="@+id/et_login_id"
+            android:layout_marginLeft="32dp"
+            android:textSize="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ywooo21@gmail.com"/>
     </LinearLayout>
     <LinearLayout
         android:layout_gravity="center"
         android:layout_width="324dp"
         android:layout_height="50dp"
         android:layout_marginTop="18dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:background="@drawable/signup2_round_background"
         >
         <TextView
-            android:layout_marginTop="15dp"
+            android:fontFamily="@font/noto_regular"
             android:layout_marginLeft="21dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,15 +69,15 @@
             android:gravity="center_horizontal"
             android:text="비밀번호"/>
         <EditText
+            android:fontFamily="@font/noto_regular"
             android:textSize="14dp"
-            android:layout_marginTop="16dp"
             android:background="@null"
             android:id="@+id/et_login_pw"
             android:layout_marginLeft="18dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:text="rla12345"/>
+            android:text="1234567"/>
     </LinearLayout>
     <TextView
         android:id="@+id/tv_login_login_button"
@@ -89,7 +90,7 @@
         android:textColor="#ffffff"
         android:lineSpacingExtra="0sp"
         android:gravity="center"
-       android:text="로그인"
+        android:text="로그인"
         android:textStyle="bold"
         />
     <LinearLayout
@@ -97,24 +98,25 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_height="18dp">
+        android:gravity="center_vertical"
+        android:layout_height="wrap_content">
         <TextView
+            android:fontFamily="@font/noto_regular"
             android:layout_marginRight="26dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:textColor="#5c5c5c"
             android:lineSpacingExtra="4sp"
-            android:layout_gravity="center"
-           android:text="자동 로그인"
+            android:text="자동 로그인"
             />
-<CheckBox
-    android:layout_marginRight="36.5dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/cb_login_auto_check_box"
-    android:layout_gravity="center"
-    />
+        <CheckBox
+            android:layout_marginRight="36.5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cb_login_auto_check_box"
+            android:layout_gravity="center"
+            />
     </LinearLayout>
 
     <LinearLayout
