--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -9,6 +9,7 @@
     tools:context=".Moohyeon.Activity.SignUp2Activity">
 
     <TextView
+        android:fontFamily="@font/noto_bold"
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:background="@drawable/top"
@@ -16,7 +17,7 @@
         android:lineSpacingExtra="6sp"
         android:text="가입정보 입력"
         android:textColor="#000000"
-        android:textSize="14sp" />
+        android:textSize="16sp" />
 
     <RelativeLayout
         android:gravity="center_vertical"
@@ -25,24 +26,26 @@
         android:background="@drawable/signup2_round_background"
         android:layout_width="324dp"
         android:layout_height="48dp">
-    <TextView
-        android:id="@+id/tv_sign_up2_name"
-        android:textSize="14dp"
-        android:layout_marginLeft="18dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text="이름"/>
-  <EditText
-      android:id="@+id/et_sign_up2_name"
-      android:background="@null"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:hint="깅스"
-      android:textSize="14sp"
-      android:textColor="#999999"
-      android:layout_marginLeft="113dp"
-     />
+        <TextView
+            android:fontFamily="@font/noto_regular"
+            android:id="@+id/tv_sign_up2_name"
+            android:textSize="14dp"
+            android:layout_marginLeft="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:text="이름"/>
+        <EditText
+            android:fontFamily="@font/noto_regular"
+            android:id="@+id/et_sign_up2_name"
+            android:background="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="깅스"
+            android:textSize="14sp"
+            android:textColor="#999999"
+            android:layout_marginLeft="113dp"
+            />
     </RelativeLayout>
     <RelativeLayout
         android:layout_gravity="center"
@@ -51,7 +54,8 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
-            android:layout_marginTop="14dp"
+            android:fontFamily="@font/noto_regular"
+            android:layout_marginTop="9dp"
             android:id="@+id/tv_sign_up2_email"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
@@ -60,7 +64,8 @@
             android:textColor="#000000"
             android:text="이메일"/>
         <EditText
-            android:layout_marginTop="14dp"
+            android:fontFamily="@font/noto_regular"
+            android:layout_marginTop="9dp"
             android:id="@+id/et_sign_up2_email"
             android:background="@null"
             android:layout_width="wrap_content"
@@ -87,6 +92,7 @@
 
 
     <TextView
+        android:fontFamily="@font/noto_regular"
         android:layout_marginTop="6dp"
         android:layout_gravity="center"
         android:id="@+id/tv_sign_up2_available_email"
@@ -108,6 +114,7 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
+            android:fontFamily="@font/noto_regular"
             android:id="@+id/tv_sign_up2_pw"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
@@ -116,6 +123,7 @@
             android:textColor="#000000"
             android:text="비밀번호"/>
         <EditText
+            android:fontFamily="@font/noto_regular"
             android:id="@+id/et_sign_up2_pw"
             android:background="@null"
             android:layout_width="wrap_content"
@@ -135,6 +143,7 @@
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
+            android:fontFamily="@font/noto_regular"
             android:id="@+id/tv_sign_up2_re_pw"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
@@ -143,6 +152,7 @@
             android:textColor="#000000"
             android:text="비밀번호 확인"/>
         <EditText
+            android:fontFamily="@font/noto_regular"
             android:id="@+id/et_sign_up2_re_pw"
             android:background="@null"
             android:layout_width="wrap_content"
@@ -155,18 +165,19 @@
             />
     </RelativeLayout>
 
-        <TextView
-            android:layout_marginTop="24dp"
-            android:layout_gravity="center"
-            android:id="@+id/tv_sign_up2_available_pw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="13sp"
-            android:textColor="@color/colorPrimary"
-            android:lineSpacingExtra="7sp"
-            android:gravity="center_horizontal"
-            android:textStyle="bold"
-            android:text=""/>
+    <TextView
+        android:fontFamily="@font/noto_regular"
+        android:layout_marginTop="24dp"
+        android:layout_gravity="center"
+        android:id="@+id/tv_sign_up2_available_pw"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:textColor="@color/colorPrimary"
+        android:lineSpacingExtra="7sp"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
+        android:text=""/>
 
     <Button
         android:layout_marginTop="26dp"
