--- a/app/src/main/res/layout/fragment_directory.xml
+++ b/app/src/main/res/layout/fragment_directory.xml
@@ -32,6 +32,7 @@
                 android:textSize="15sp" />
 
             <EditText
+                android:fontFamily="@font/noto_regular"
                 android:background="@null"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
@@ -40,14 +41,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-
                 android:layout_marginStart="18.2dp"
-
                 android:hint="이름,역할,소속,협업 분야,키워드"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="1sp"
                 android:textColor="#222222"
-                android:textSize="15sp" />
+                android:textSize="14sp" />
 
             <ImageView
                 android:id="@+id/iv_directory_finish"
@@ -80,7 +79,7 @@
                 android:layout_marginBottom="10dp"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="9sp"
-                android:src="@drawable/img_directorytop"
+                android:src="@drawable/img_directorytop_renew"
                 android:textColor="#999999"
 
                 />
