--- a/app/src/main/res/layout/fragment_lounge.xml
+++ b/app/src/main/res/layout/fragment_lounge.xml
@@ -5,27 +5,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-        <RelativeLayout
-            android:id="@+id/rl_top_bar_lounge"
-            android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="#ffffff">
+    <RelativeLayout
+        android:id="@+id/rl_top_bar_lounge"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="#ffffff">
 
-            <TextView
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:gravity="center_horizontal"
-                android:text="라운지"
-                android:textColor="#000000"
-                android:lineHeight="20sp"
-                android:textSize="20sp"
-                />
+        <TextView
+            android:fontFamily="@font/noto_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"
+            android:text="라운지"
+            android:textColor="#000000"
+            android:lineHeight="20sp"
+            android:textSize="20sp"
+            />
 
-        </RelativeLayout>
+    </RelativeLayout>
 
 
     <RelativeLayout
@@ -56,7 +56,7 @@
         android:orientation="vertical"
         >
         <TextView
-            android:textStyle="bold"
+            android:fontFamily="@font/noto_bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -65,17 +65,18 @@
             android:lineSpacingExtra="2sp"
             android:gravity="center_horizontal"
             android:text="CLUB"
-            android:layout_marginLeft="26dp"
-            android:layout_marginTop="6dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="0dp"
             />
         <TextView
+            android:fontFamily="@font/noto_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
             android:lineHeight="20sp"
             android:textColor="#000000"
             android:layout_marginLeft="19.5dp"
-            android:layout_marginTop="49dp"
+            android:layout_marginTop="35dp"
             android:text="관심 있는 클럽에 가입 해\n멤버들과 더욱 긴밀한 교류를\n경험해 보세요."
             />
         <View
@@ -86,4 +87,4 @@
 
     </RelativeLayout>
 
-    </RelativeLayout>
+</RelativeLayout>
